--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,6 +1,9 @@
-<h1>All Products</h1>
-<ul>
+<h1>Products</h1>
+
+<div id="products">
   <% @products.each do |product| %>
-    <li><%= product.name %></li>
+    <div>
+      <%= link_to product.name, product_path(product) %>
+    </div>
   <% end %>
-</ul>
+</div>
