--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,3 +1,6 @@
 <h1><%= @product.name %></h1>
+
+<%= link_to "Back", products_path %>
+
 <p><strong>Mô tả:</strong> <%= @product.description %></p>
 <p><strong>Giá:</strong> <%= number_to_currency(@product.price, unit: "₫", delimiter: ".", format: "%n %u") %></p>
