Implement product editing functionality: add edit and update actions, enhance form rendering, and update routes for products

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -1,6 +1,5 @@
-<h1 class="page-heading">New Product</h1>
-
-<%= render "form", product: @product, label_submit: "Create Product" %>
+<h1 class="page-heading">Edit Product</h1>
+<%= render "form", product: @product, label_submit: "Edit Product" %>
 
 <style>
 
