--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,6 +32,7 @@
             <div class="product-actions">
               <%= link_to "View", product_path(product), class: "btn btn-sm btn-outline-primary" %>
               <%= link_to "Edit", edit_product_path(product), class: "btn btn-sm btn-outline-edit" %>
+              <%= link_to "Delete", product_path(product, auto_delete: 1), class: "btn btn-outline-delete" %>
             </div>
           </td>
         </tr>
