--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,7 +32,10 @@
             <div class="product-actions">
               <%= link_to "View", product_path(product), class: "btn btn-sm btn-outline-primary" %>
               <%= link_to "Edit", edit_product_path(product), class: "btn btn-sm btn-outline-edit" %>
-              <%= link_to "Delete", product_path(product, auto_delete: 1), class: "btn btn-outline-delete" %>
+              <%= button_to "Delete", product, method: :delete, 
+                  class: "btn btn-sm btn-outline-delete", 
+                  data: { turbo_confirm: "Are you sure?" },
+                  form: { class: "form_delete" } %>
             </div>
           </td>
         </tr>
